samples/webserver/ingress/deploy-echo-app-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: echo
  name: echo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1

  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echo
      annotations:
        fluentbit.io/parser: echo
    spec:
      containers:
      - image: mendhak/http-https-echo:23
        name: http-https-echo
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
        resources: {}
      serviceAccount: echo
      serviceAccountName: echo
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: echo-app-service
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
