samples/webserver/ingress/nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1

  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
      annotations:
        fluentbit.io/parser: nginx
    spec:
#imagePullSecrets:
#      - name: harbor-registry-secret
      containers:
      #- image: nginx
      - image: infra-harbor.lab.pcfdemo.net/library/nginx:latest
        name: nginx-app
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
        resources: {}
      serviceAccount: nginx
      serviceAccountName: nginx
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
spec:
  #type: LoadBalancer
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
