samples/webserver/ingress/httpproxy-to-echo.yml
#https://projectcontour.io/docs/v1.13.1/config/request-routing/#response-timeouts
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpproxy-echo
spec:
  virtualhost:
    fqdn: echo.lab.pcfdemo.net
  routes:
    - services:
        - name: echo-app-service
          port: 80
